Refactor binary generation options
The previous release generated Windows binaries that were
broken (GH-53) and Linux binaries that were unintentionally
dynamic (GH-48).

This commit provides an updated Makefile and GitHub
workflow which provides multiple build options for both
dynamic and static linking, but defaults to the previous
dynamically linked behavior.

The GitHub Workflow jobs based on the Makefile build
tasks use a 20 minute timeout vs the 10 minute timeout
used previously. Also, `CGO_ENABLED` has been explicitly
set in order to ensure that cgo support is enabled.

The Makefile build options now explicitly enable the
`CGO_ENABLED` environment variable so that all builds
have the required cgo functionality enabled.

A `docker` Makefile recipe is provided to generate
binaries using new Docker images from the `atc0005/go-ci`
project based on the official Golang Alpine Linux
image. The result is statically linked binaries based on
the musl C library instead of glibc. The intent is to
help prevent licensing issues surround the GNU C
library's LGPL licensing (which I do not fully understand).

Multiple build tags are specified for static builds which
enable Go-specific replacements for common glibc-provided
features:

- `osusergo`
- `netgo`

and a build tag specific to disabling SQLite extensions,
which we do not use with this specific project:

- `sqlite_omit_load_extension`

Minor documentation updates have been included which update
the build requirements and specific steps for building
binaries for this project. Further updates are likely
needed to add polish. Several reference links have also
been added.

A Docker Compose file has been included for kicking off
multiple static binary builds in parallel, but it may end
up getting tossed in a later PR if we don't make sufficient
use of it.

- refs GH-48
- refs golang/go 38789
- refs golang/go 26492

- refs atc0005/go-ci#85

--- a/.github/workflows/lint-and-build-code.yml
+++ b/.github/workflows/lint-and-build-code.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2.3.3
 
-      - name: Build using vendored dependencies
+      - name: Build using vendored dependencies and explicitly enabled CGO
         run: |
-          go build -v -mod=vendor ./cmd/mysql2sqlite
-          go build -v -mod=vendor ./cmd/check_mysql2sqlite
+          CGO_ENABLED=1 go build -v -mod=vendor ./cmd/mysql2sqlite
+          CGO_ENABLED=1 go build -v -mod=vendor ./cmd/check_mysql2sqlite
