--- a/.github/workflows/lint-and-build-using-make.yml
+++ b/.github/workflows/lint-and-build-using-make.yml
@@ -52,11 +52,13 @@ jobs:
       - name: Run Go linting tools using project Makefile
         run: make linting
 
-  build_code_with_makefile:
-    name: Build codebase using Makefile
+  # This is run from *within* a container that is itself within the GitHub
+  # Actions environment. All of these commands are run within our container.
+  build_dynamic_binaries_with_makefile:
+    name: Build dynamically linked binaries using Makefile
     runs-on: ubuntu-latest
     # Default: 360 minutes
-    timeout-minutes: 10
+    timeout-minutes: 20
     container:
       image: "index.docker.io/golang:latest"
 
@@ -68,8 +70,76 @@ jobs:
         uses: actions/checkout@v2.3.3
 
       # bsdmainutils provides "column" which is used by the Makefile
-      - name: Install Ubuntu packages
-        run: apt-get update && apt-get install -y --no-install-recommends make gcc bsdmainutils
+      # other packages are needed for cross-compilation
+      - name: Install Ubuntu packages needed for cross-compilation
+        run: |
+          apt-get update && \
+            apt-get install -y --no-install-recommends \
+            make \
+            bsdmainutils \
+            gcc \
+            gcc-multilib \
+            gcc-mingw-w64
 
       - name: Build using project Makefile
         run: make all
+
+  # This is run from *within* a container that is itself within the GitHub
+  # Actions environment. All of these commands are run within our container.
+  build_static_binaries_with_makefile:
+    name: Build statically linked binaries using Makefile
+    runs-on: ubuntu-latest
+    # Default: 360 minutes
+    timeout-minutes: 20
+    container:
+      image: "index.docker.io/golang:latest"
+
+    steps:
+      - name: Print go version
+        run: go version
+
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2.3.3
+
+      # bsdmainutils provides "column" which is used by the Makefile
+      # other packages are needed for cross-compilation
+      - name: Install Ubuntu packages needed for cross-compilation
+        run: |
+          apt-get update && \
+            apt-get install -y --no-install-recommends \
+            make \
+            bsdmainutils \
+            gcc \
+            gcc-multilib \
+            gcc-mingw-w64
+
+      - name: Build using project Makefile
+        run: make all-static
+
+  # This is run directly within the GitHub Actions environment and calls the
+  # `docker` command to perform specific build tasks within Docker containers.
+  # Prep steps are run within the GitHub Actions environment and not within
+  # the containers.
+  build_static_binaries_with_makefile_docker_recipe:
+    name: Build static binaries using Docker images
+    runs-on: ubuntu-latest
+    # Default: 360 minutes
+    timeout-minutes: 20
+
+    steps:
+      - name: Print go version
+        run: go version
+
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2.3.3
+
+      # bsdmainutils provides "column" which is used by the Makefile
+      - name: Install Ubuntu packages
+        run: |
+          sudo apt-get update && \
+          sudo apt-get install -y --no-install-recommends \
+            bsdmainutils \
+            make
+
+      - name: Build using project Makefile Docker recipe
+        run: make docker
