Allow specifying SQLite busy timeout via cfg file
Remove hard-coded value of 1000, replace with default value
of 1000 and support for specifying an alternate value via
config file setting.

Update documentation to cover new setting.

Update contrib/example file to document new setting.

refs GH-35

--- a/contrib/mysql2sqlite/config.example.yaml
+++ b/contrib/mysql2sqlite/config.example.yaml
@@ -100,6 +100,12 @@ sqlite_config:
   # to generate indexes when creating tables in the SQLite database file.
   create_indexes: false
 
+  # Sleep time used when a table is locked. If not zero, multiple sleep
+  # attempts are made until at least the specified value of milliseconds of
+  # sleeping have accumulated. After the specified value of milliseconds,
+  # SQLITE_BUSY is returned.
+  busy_timeout: 1000
+
 logging:
   # https://github.com/apex/log
   # supported settings for this app: debug, info, warn, error, fatal
