Allow specifying SQLite journal mode
- retain default setting of `DELETE` for journal mode
- update contrib/example config file to set `DELETE` as the
  default journal mode
- remove comment blocks associated with SQLite journal mode

refs GH-10

--- a/contrib/mysql2sqlite/config.example.yaml
+++ b/contrib/mysql2sqlite/config.example.yaml
@@ -106,6 +106,11 @@ sqlite_config:
   # SQLITE_BUSY is returned.
   busy_timeout: 1000
 
+  # Sets the journal mode for the database associated with the database
+  # connection. The default is DELETE.
+  # See also https://www.sqlite.org/pragma.html#pragma_journal_mode
+  journal_mode: DELETE
+
 logging:
   # https://github.com/apex/log
   # supported settings for this app: debug, info, warn, error, fatal
