Update project Go version to use stable release
Switch from oldstable (currently Go 1.19) to stable series
(currently 1.20). This reflects the recent change to this
release series as of the v0.2.8 release.

I intentionally set the Dockerfile one update back to test
the Dependabot monitoring changes for that file.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -79,7 +79,6 @@ updates:
     ignore:
       - dependency-name: "golang"
         versions:
-          # Ignore updates from series associated with the latest "stable"
-          # Go release and no longer supported Go versions.
-          - ">= 1.20"
-          - "< 1.19"
+          # Track updates to latest stable release series.
+          - ">= 1.21"
+          - "< 1.20"
